Mine rettelser til appendices..

--- a/Rapport/content/Serial_Peripheral_Interface.tex
+++ b/Rapport/content/Serial_Peripheral_Interface.tex
@@ -1,5 +1,6 @@
 \section{Serial Peripheral Interface}
-Kommunikationen mellem mikrocontolleren og FPGA’en foregår med SPI (Serial Peripheral Interface). SPI understøtter full-duplex kommunikation mellem en master og en eller flere slaver
+Kommunikationen mellem mikrocontolleren og FPGA’en foregår med SPI. % (Serial Peripheral Interface). 
+SPI understøtter full-duplex kommunikation mellem en master og en eller flere slaver
 %Det er en standard hvor der bliver overført data mellem en master og en eller flere slaver. 
 %Overførelsen sker med full duplex, så der bliver sendt data både fra masteren og slaven på samme tid. 
 Opstillingen med en master og en slave kan ses på figur \ref{fig:SPImasterslave}.
