Udkast til ansvarsområder.

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -27,21 +27,20 @@ De primære ansvarsområder er listet i nedenstående tabel
 \setlength{\extrarowheight}{5pt}
  \begin{tabular}{r|l}
 Navn&Opgaver/Ansvarsområder \\[6pt] \hline
-Åse&\\
-&\\[6pt] \hline
-Mikkel& DJ\\ 
-& Food supply\\[6pt] \hline
+Åse&FPGA\\
+&Regulator optimering\\[6pt] \hline
+Mikkel& FPGA\\ 
+& Regulator design\\[6pt] \hline
 Mikael& Systemmodellering\\
-&\\[6pt] \hline
-Nikolaj&\\
-&\\[6pt] \hline
-Anders&\\
-&\\[6pt] \hline
-Michael & -\\
-&\\ 
+&Regulator design\\[6pt] \hline
+Nikolaj&Mikrocontroller\\
+&Regulator optimering\\[6pt] \hline
+Anders&Systemmodellering\\
+&Regulator optimering\\[6pt] \hline
+Michael &Mikrocontroller\\
+&Regulator optimering\\ 
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
 \end{table}\\~\\ 
 Det skal understreges, at tabellen er vejledende og at hele gruppen har været med over alle områder.
-\todo[inline,author=Mikael]{trololol skriv ansvarsområder}
 
