--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,15 +1,23 @@
 \section*{Indledning}
 \todo[inline,author=Mikael]{Mindre læseguide, mere awesomeness}
+\todo[inline, author=Michael, color=green]{Tilføjet 4 [rad] awesomeness, samt 2,718  [Nm] læseguide.}
 Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
 af f.eks. overvågningskameraer.
 Fælles for mange af sådanne trackingsystemer er, at de bruger et Pan \& Tilt System til at følge deres mål. 
 
 I dette projekt udvikles et Pan \& Tilt trackingsystem, som følger en lerdues bevægelse i 
-luften. For at udvikle et sådant system skal passende regulatore designes og implementeres
-på en mikrocontroller. 
+luften. Systemet dimensioneres til brug i en English Skeet konkurrence. Kravene til systemet analyseret i første del af rapporten. 
+
+For at kunne designe en passende regulator til systemet skal udledes en matematisk model. Dette gøres i anden del af rapporten. 
+
+I tredje del af rapporten diskuteres implementeringen af regulatorerne og diverse hjælpe-funktioner på mikrocontrolleren. Der beskrives også hvordan en FPGA bruges til at generere PWM-signaler og læse motorernes position. 
+
+Inden rapporten konkluderes, beskrives justeringen/tuningen af regulatorerne. Dette er fjerde del af rapporten, som også indeholder tests af systemets endelige performance. 
+
+%For at udvikle et sådant system skal passende regulatore designes og implementeres på en mikrocontroller. 
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-En FPGA  bruges til at læse systemets position og generere ønsket PWM-signal til motorerne. 
-Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
+%En FPGA  bruges til at læse systemets position og generere ønsket PWM-signal til motorerne. 
+%Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
 % \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
