system identifikation indledning er Mikaelrettet

--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,10 +1,13 @@
 \part{Systemidentifikation}
-Denne del gennemgås den teoretiske beskrivelse af systemet.
-Design af passende regulatorer tager udgangspunkt i teoretiske beskrivelse af PTS. Identifikationen af PTS udledes i sektion \ref{sec:matPTS} vha. målinger af motorerne samt systemets dynamik. 
-Modellen verificeres ved at sammenligne åbensløjferesponsen mellem det fysiske system og den teoretiske model.
+Denne del gennemgår den teoretiske beskrivelse af systemet.
+Design af passende regulatorer tager udgangspunkt i en teoretisk beskrivelse af PTS.
+PTS identificeres i sektion \ref{sec:matPTS} vha. målinger på motorerne samt systemets dynamik. 
+Modellen verificeres ved sammenligning af åbensløjferesponserne for det fysiske system og den teoretiske model.
 
-I sektion \ref{sec:kontrollerdeign} diskretiseres den teoretiske model for PTS mht. design af diskret regulator. Den diskrete model optimeres, bl.a. ved at tilføje dødzone. 
+I sektion \ref{sec:kontrollerdeign} diskretiseres den teoretiske model for PTS mht. design af diskret regulator.
+Den diskrete model optimeres, bl.a. ved at tilføje dødzone. 
 På baggrund af de fundne diskrete overføringsfunktioner diskuteres valg af regulatortype. 
+
 Desuden gennemgås transformationen fra kartesiske koordinater til sfæriske koordinater.
 %\todo[inline,author=Mikael]{Dette afsnit skal være bedre!}
 %Denne del gennemgår den teoretiske beskrivelse af systemet.
